fix align

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
 body {
   font-family: "helvetica", sans-serif;
-  text-align: center;
+  text-align: left;
 }
